--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fff;
+    background-color: #25316D;
     font-family: "Inter Tight", sans-serif;
 }
 
@@ -100,20 +100,55 @@ body {
 }
 
 .sets {
-    margin: 50px 20px;
-    display: flex;
-    flex-direction: row;
+    margin: 200px 100px;
+    display: inline-flex;
+    height: 200px;
 }
 
-.sets button {
+.card--input{
+    height: 40px;
+    margin: 40px;
+    width: 180px;
+    background-color: #182747;
+    color: #7895B2;
+    border: none;
+    text-align: center;
+    border-radius: 20px;
+
+}
+.card--button{
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+    margin-left: 100px;
     cursor: pointer;
-    margin: 20px;
+    background-color: #182747;
+    font-size: 30px;
+    font-weight: 600;
+
+}
+.card{
+    background-color: #7895B2;
+    border-radius: 30px;
+    height: 200px;
 }
 
 #cards {
     width: 200px;
-    height: 80px;
     margin-left: 20px;
     text-align: center;
 
+}
+
+.cardName{
+    padding: 30px;
+    border: none;
+    border-radius: 30px 30px 0px 0px;
+    background-color: #182747;
+}
+.deleteCard{
+}
+.editName{
+}
+.editBtn{
 }
