--- a/client/src/style.css
+++ b/client/src/style.css
@@ -338,7 +338,7 @@ body {
     opacity: 0.7;
 }
 
-.pointCounter{
+.pointCounter {
     position: absolute;
     margin: 0px -350px;
     background-color: #400D51;
@@ -362,27 +362,58 @@ body {
 }
 
 
-.correctAns{
+.correctAns {
     border-radius: 20px 20px 0 0;
     text-align: center;
     background-color: #400D51;
 }
 
 
-.wrongAns{
+.wrongAns {
     border-radius: 0 0 20px 20px;
     text-align: center;
     background-color: #400D51;
 }
 
-.playAgain{
+.playAgain {
     background-color: #533483;
     color: #FFF;
     border: none;
     height: 40px;
     cursor: pointer;
 }
-.playAgain:hover{
+
+.playAgain:hover {
     opacity: 0.7;
 }
 
+.backBtn {
+    position: absolute;
+    margin: 20px -425px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    background-color: #400D51;
+    font-size: 25px;
+    font-weight: 900;
+    border: none;
+}
+
+.backBtn:hover {
+    opacity: 0.7;
+}
+
+.pairWith {
+    background-color: #400D51;
+    color: #FFF;
+    margin: 15px;
+    width: 240px;
+    height: 120px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 45px;
+}
+.pairWith:hover{
+    opacity: 0.7;
+}
