--- a/TodoApp-with-MongoDB/client/src/style.css
+++ b/TodoApp-with-MongoDB/client/src/style.css
@@ -1,8 +1,83 @@
-.task--head {
-    text-align: center;
-    background-color: #790252;
-    color: #fff;
-    margin: 20px;
+body {
+    background-image: url(./images/pic.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.todo--todos {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 3px;
+    background-color: #fff;
+    border-radius: 6px;
+    opacity: 0.9;
+}
+.todo--todos:hover{
+    opacity: 0.85;
+}
+
+#todo--footer {
+    width: 80%;
+    height: 50px;
+    margin-bottom: 60px;
+    margin-left: 120px;
+    background-color: #fff;
+    border-radius: 6px;
+
+}
+
+.todo-addbtn {
+    margin: 15px 10px;
+    background-color: #fff;
+    border-radius: 50px;
+    width: 20px;
+    height: 20px;
+}
+
+.todo--input {
+    border: none;
+    width: 80%;
+    outline: none;
+}
+
+.todo--deletebtn {
+    margin-left: auto;
+    margin-right: 20px;
+    color: #B73E3E;
+    background-color: #fff;
+    border: none;
     font-size: 20px;
-    border-radius: 10px;
+}
+
+.startscreen {
+    background-image: linear-gradient(#F8EDE3, #562B08);
+    width: 240px;
+    height: 240px;
+    border-radius: 5px;
+    position: absolute;
+    top: 30%;
+    left: 45%;
+    margin: -25px 0 0 -25px;
+}
+
+.startscreen img {
+    width: 120px;
+    margin-left: 60px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.startscreen h4 {
+    font-size: 18px;
+    color: #fff;
+    text-align: center;
+    font-weight: 700;
+}
+
+.startscreen p {
+    font-size: 12px;
+    text-align: center;
+    color: #fff;
+
+
 }
