--- a/TodoApp-with-MongoDB/client/src/style.css
+++ b/TodoApp-with-MongoDB/client/src/style.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(./images/pic.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:100% auto ;
 }
 
 .todo--todos {
