--- a/TodoApp-with-MongoDB/client/src/style.css
+++ b/TodoApp-with-MongoDB/client/src/style.css
@@ -1,8 +1,38 @@
 body {
     background-image: url(./images/pic.jpg);
     background-repeat: no-repeat;
-    background-size:100% auto ;
+    background-size: 84% auto;
+    background-position: 100% 30%;
 }
+
+.todos-main {
+    margin-left: 18%;
+    width: auto;
+    height: 600px;
+    overflow: auto;
+    text-align: justify;
+}
+
+.todos-main::-webkit-scrollbar {
+    width: 3px;
+
+}
+
+.todos-main::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 20px;
+}
+
+.todos-main::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 20px;
+
+}
+
+.todos-main::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 
 .todo--todos {
     position: relative;
@@ -20,6 +50,9 @@ body {
 .todo--todos:hover {
     opacity: 0.85;
 }
+
+
+
 
 .todo--completebtn {
     width: 20px;
@@ -55,10 +88,10 @@ body {
 
 
 #todo--footer {
-    width: 80%;
+    width: 70%;
     height: 50px;
     margin-bottom: 60px;
-    margin-left: 9%;
+    margin-left: 23%;
     background-color: #fff;
     border-radius: 6px;
 
@@ -95,7 +128,7 @@ body {
     position: absolute;
     top: 30%;
     left: 45%;
-    margin: -25px 0 0 -25px;
+    margin: -35px 0 0 100px;
 }
 
 .startscreen img {
@@ -133,3 +166,52 @@ body {
     opacity: 0.9;
 }
 
+
+.header-home-section {
+    text-decoration: none;
+    margin-top: 60px;
+    font-size: 18px;
+    color: #111;
+}
+
+.header-home-section i {
+    margin-left: 8px;
+    color: grey;
+}
+
+.header-home-section:hover {
+    opacity: 0.8;
+    color: #111;
+    background-color: #555;
+}
+
+.header-important-section {
+    text-decoration: none;
+    height: 40px;
+    font-size: 18px;
+    color: #111;
+
+}
+
+.header-important-section i {
+    margin-left: 8px;
+    color: red;
+}
+
+.header-important-section:hover {
+    opacity: 0.8;
+    color: #111;
+}
+
+.header-button {
+    height: 50px;
+    background-color: #555;
+    width: 200px;
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+.header-button:hover {
+    opacity: 0.7;
+    color: #111;
+}
